Updated to multiloader