@@ -2,16 +2,18 @@ package org.modogthedev.superposition.system.cable;
 
 import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-import org.modogthedev.superposition.util.Mth;
 import org.modogthedev.superposition.core.SuperpositionConstants;
+import org.modogthedev.superposition.util.Mth;
 import oshi.util.tuples.Pair;
 
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 
+// TODO add spacial mapping + make this static
 public class CableClipResult {
-    private HashMap<Cable, List<Cable.Point>> cablePointMap = new HashMap<>();
+
+    private final HashMap<Cable, List<Cable.Point>> cablePointMap = new HashMap<>();
     private final Level level;
     private final Vec3 sourcePos;
     private final float collectRange;
@@ -20,12 +22,12 @@ public class CableClipResult {
         this.sourcePos = pos;
         this.collectRange = collectRange;
         this.level = level;
-        collectPoints();
+        this.collectPoints();
     }
 
     private void collectPoints() {
         for (Cable cable : CableManager.getLevelCables(level)) {
-            if (cable.getPoints().get(0).getPosition().distanceTo(sourcePos) < cable.getPoints().size() + collectRange) {
+            if (cable.getPoints().getFirst().getPosition().distanceTo(sourcePos) < cable.getPoints().size() + collectRange) {
                 cablePointMap.put(cable, new ArrayList<>());
                 for (Cable.Point point : cable.getPoints()) {
                     if (point.getPosition().distanceTo(sourcePos) < collectRange) {
@@ -36,12 +38,8 @@ public class CableClipResult {
         }
     }
 
-    public HashMap<Cable, List<Cable.Point>> getCablePointMap() {
-        return cablePointMap;
-    }
-
     public Pair<Cable, Cable.Point> rayCastForClosest(Vec3 toPos, float range) {
-        List<Pair<Cable, Cable.Point>> rayCast = rayCast(toPos, range);
+        List<Pair<Cable, Cable.Point>> rayCast = this.rayCast(toPos, range);
         List<Pair<Float, Cable.Point>> distancePointPairMap = new ArrayList<>();
         for (Pair<Cable, Cable.Point> cablePointPair : rayCast) {
             distancePointPairMap.add(new Pair<>(999f, cablePointPair.getB()));
@@ -53,8 +51,9 @@ public class CableClipResult {
                 boolean isAnEndPoint = cablePointPair.getA().getPoints().get(cablePointPair.getA().getPoints().size() - 1).equals(cablePointPair.getB()) || cablePointPair.getA().getPoints().get(0).equals(cablePointPair.getB());
                 float distance = (float) cablePointPair.getB().getPosition().distanceTo(stepPos) - (isAnEndPoint ? SuperpositionConstants.endPreference : 0f);
                 float storedDistance = distancePointPairMap.get(i).getA();
-                if (distance < storedDistance)
+                if (distance < storedDistance) {
                     distancePointPairMap.set(i, new Pair<>(distance, cablePointPair.getB()));
+                }
                 i++;
             }
         }
@@ -67,8 +66,9 @@ public class CableClipResult {
                 closestPointIndex = i;
             }
         }
-        if (!rayCast.isEmpty())
+        if (!rayCast.isEmpty()) {
             return rayCast.get(closestPointIndex);
+        }
         return null;
     }
 
